text align fix
not completely fixed, but good enough for tonight.

--- a/resources/home-style.css
+++ b/resources/home-style.css
@@ -110,8 +110,7 @@ h2 {
 .intro_item {
 	visibility: hidden;
 	position: fixed;
-	width:100%;
-	/*top: 8em;*/
+	/*width:100%;*/
 }
 .head {
 	text-align: center;
